# diamond

./: Cargo.toml  README.md
.github/workflows/: android.yaml  windows.yml
src/: backend.rs  commands.rs  crypto.rs  dec_enc.rs  helpers.rs  main.rs  test.rs  toml.rs  vault.rs
