[package]
name = "diamond"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
arboard = {version = "3.6.1", optional = true}
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.44"
colored = "3.1.1"
rand = "0.10.0"
rpassword = "7.4.0"
rustyline = "17.0.2"
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.149"
toml = "1.0.6"
zeroize = "1.8.2"
zxcvbn = "3.1.0"

[features]
default = ["desktop"]
desktop = ["arboard"]
termux = []
