[package]
name = "diamond"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.44"
colored = "3.1.1"
hex = "0.4.3"
indicatif = "0.18.4"
qrcode = "0.14.1"
rand = "0.10.0"
rpassword = "7.4.0"
rustyline = "17.0.2"
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.149"
terminal-clipboard = "0.4.1"
toml = "1.0.6"
totp-rs = {version = "5.7.1" , features = ["gen_secret" , "otpauth"]}
zeroize = "1.8.2"
zxcvbn = "3.1.0"
